feat: complete base

--- a/.prettierrc
+++ b/.prettierrc
@@ -24,6 +24,12 @@
         "parser": "json",
         "tabWidth": 2
       }
+    },
+    {
+      "files": "**/*.json",
+      "options": {
+        "tabWidth": 2
+      }
     }
   ]
 }
